# sage

./: .gitignore  serialize.py  test.py
generator/: alpaca_clean.py  concat.py  finetune.yaml  llama_clean.py  rearrange.py
generator/comments/: comments.go  go.sum
generator/details/: details.go  go.mod
hoagieplan/: get_comments.py  get_details.py  pyproject.toml
hoagieplan/compass/: models.py  serializers.py  tests.py  views.py
hoagieplan/compass/migrations/: 0001_initial.py  0002_course_crosslistings.py  0003_customuser_requirements.py  0004_alter_section_class_number_delete_courseequivalent.py
hoagieplan/config/: settings.py  urls.py
hoagieplan/former/: fetch_context.py  generator.py
